# opencv_image_classifier

./: .gitignore  CMakeLists.txt  README.md
example/: classifier.cpp  classify.cpp  visual_vocabulary.cpp
src/: classifier.cpp  files.hpp  visual_vocabulary.cpp
src/cv/: bag_of_features.cpp  bag_of_features.h  serialize_cvmat.h  visual_vocabulary.cpp  visual_vocabulary.h
src/ml/: classifier.cpp  classifier.h
test/: functional_test.cpp
